backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: spring-backend
  template:
    metadata:
      labels:
        app: spring-backend
    spec:
      containers:
        - name: spring-backend
          image: danial077/spring-backend:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: spring-backend-service
spec:
  selector:
    app: spring-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
