frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: node-frontend
  template:
    metadata:
      labels:
        app: node-frontend
    spec:
      containers:
        - name: node-frontend
          image: yermanov/react-frontend:latest
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: node-frontend-service
spec:
  selector:
    app: node-frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
