load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-backend-service
spec:
  type: LoadBalancer
  selector:
    app: java-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
