ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: application-ingress
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: java-backend-service
                port:
                  number: 8080
          - path: /frontend
            pathType: Prefix
            backend:
              service:
                name: node-frontend-service
                port:
                  number: 3000
